--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
     # uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
     - name: Upload build artifact
-    - uses: actions/upload-artifact@v5
+      uses: actions/upload-artifact@v5
       with:
         name: sideloader-build
         path: builds/*.jar
