--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,5 +38,5 @@ jobs:
       uses: actions/upload-artifact@v5
       with:
         name: sideloader-build
-        path: builds/*.jar
+        path: target/*.jar
           
