--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.sideloader</groupId>
-    <artifactId>SnapSideloader</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>TheSnapSideloader</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
