--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,22 @@
         </dependency>
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>4.0.0-beta-1</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.sideloader.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
