--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>imgscalr-lib</artifactId>
             <version>4.2</version>
         </dependency>
+         <dependency>
+             <groupId>com.jetbrains.intellij.uiDesigner</groupId>
+             <artifactId>ui-designer</artifactId>
+             <version>252.27397.103</version>
+         </dependency>
     </dependencies>
 
     <build>
