--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,9 @@
             <version>4.2</version>
         </dependency>
          <dependency>
-             <groupId>com.jetbrains.intellij.uiDesigner</groupId>
-             <artifactId>ui-designer</artifactId>
-             <version>252.27397.103</version>
+             <groupId>com.intellij</groupId>
+             <artifactId>forms_rt</artifactId>
+             <version>7.0.3</version>
          </dependency>
     </dependencies>
 
